package com.packages.controller.entity;

import com.packages.controller.Controller;
import com.packages.model.entity.structure.Rock;
import com.packages.view.entity.RockView;

public class RockController extends Controller {
    public RockController(Rock rock, RockView rockView) {
        super(rock, rockView);
    }
}
