package com.packages.utils;

import com.packages.model.Model;

public interface Observer {
    void update(Model model);
}
